@@ -1,9 +1,11 @@
 TODO
 ====
-1. ERRORS section.
 3.
 
 Applied
 =======
 2. Test errors in constructor.
+OK [20230621] skim
+
+1. ERRORS section.
 OK [20230621] skim
