@@ -1,4 +1,5 @@
 0.02
+ - Add ERRORS section to doc.
  - Add tests for errors in constructor.
  - Fix link to repository and bugtracker.
 
